--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,17 @@
             overflow-x: hidden;
         }
 
+        /* Alert */
+        .alert {
+            background-color: rgb(154, 248, 154);
+            color: white;
+            text-align: center;
+            padding: 10px;
+            border-radius: 8px;
+            position: relative;
+            animation: slideDownFade 0.6s ease-out;
+        }
+
         .container {
             max-width: 1200px;
             margin: 0 auto;
@@ -24,6 +35,7 @@
             position: sticky;
             top: 0;
             z-index: 100;
+            padding: 5px;
         }
 
         nav {
@@ -487,6 +499,11 @@
             padding-top: 2rem;
             border-top: 1px solid #555;
             color: #ccc;
+        }
+
+        .footer-bottom a {
+            text-decoration: none;
+            color: white;
         }
 
         /* Animations */
